--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CHANGE ME</title>
+  <head> 
+  <title>Jace's amazing website</title>
+  <link rel="stylesheet" href=:style.css">
   </head>
 
   <body>
-    <!-- All content goes here -->
-    <div id="all-contents">
-      
+    <!--Visible HTML elements GO HERE-->
+    <div>
+      <nav>
+        <h1>Jace's Amazing website</h1>
+        <ul>
+           <li>
+             <a href="index.html"> Home </a>
+           </li>
+           <li>
+              <a href="index.html"> Portfolio </a>
+          </li>
+        </ul>
+      </nav>
+      <main>
+        <!-- Sidebar Section -->
+        <div>
+          <img src=https://ci3.googleusercontent.com/meips/ADKq_NYsb8crXC8LwUqcM54oQUjM9hy62U05nBX6r1SAyn-eNLkGMAVQz8-ZrIYuY8PlB_VzzSWT7-UhIWRuWAWva3TdHu5FAZFuEKW565PtXaah6_Aq9t9APQ3_HjTteD-D9OVieae0Qd8L_XfyUHjXfxe2OE-9U6MWmAD_V_Jf_AvGpzRpNtwludM=s0-d-e1-ft#https://s3.amazonaws.com/iq-marketing/692R79R/subjectimages/1264555085/800/primary-njniw9dzp5.png?ts=1755028352374 width=200>
+        </div>
+          <h2></h2>
+          <p></p>
+          <!-- Interests sections -->
+        <div>
+                                  <h3></h3>
+           <h3>Interests</h3>
+           <ul>
+             <li>Running Track</li>
+             <li>Playing Basketball/Football</li>
+             <li>Eating</li>
+           </ul>
+         </div>
+       </div>
+        <!-- Content section -->
+        <div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
