--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head> 
   <title>Jace's amazing website</title>
-  <link rel="stylesheet" href=:style.css">
+  <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
