--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -69,7 +69,7 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
+var postitionX = 0
 
 
 
@@ -80,9 +80,10 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
+        postitionX =  postitionX + 10;
+        moveBoxTo(200);
+        moveBoxTo(postitionX)
         
-
           
         }
 
