--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -71,7 +71,7 @@
         // TODO 2 - Variable declarations
       var postitionX = 0
       var points = 0;  
-
+      var speed = 10 
 
 
         /**
@@ -80,7 +80,7 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-        postitionX =  postitionX + 10;
+        postitionX = postitionX + speed;
         moveBoxTo(postitionX);
           
           
@@ -97,7 +97,7 @@
         postitionX = 0;
         changeBoxText(points);
         points = points + 1 
-
+        speed = speed + 3
         }
 
 
